--- a/fiverr/shoppingcart-modal/wwwroot/css/style.css
+++ b/fiverr/shoppingcart-modal/wwwroot/css/style.css
@@ -16,10 +16,18 @@
   .modal-content {
     background-color: #fefefe;
     margin: 5% auto; 
-    padding: 20px;
+    padding-bottom: 20px;
     border: 1px solid black;
     width: 60%; 
   }
+
+  .modal-header{
+    background: #EF0840;
+    padding: 20px;
+}
+  .modal-header h3{
+    color: white;
+}
   
   /* The Close Button */
   .close {
@@ -54,6 +62,7 @@
     display: block;
     overflow-y:auto;
     position: relative;
+    padding-top: 20px;
 }
    .CartContainer-checkout{
 	height: 400px;
@@ -77,7 +86,7 @@
 
 .Heading{
 	font-size: 20px;
-	font-family: 'Open Sans';
+	font-family: 'Lato', sans-serif;
 	font-weight: 700;
 }
 
@@ -86,6 +95,8 @@
 	width: 90%;
 	height: 30%;
 	align-items: center;
+    font-family: 'Lato', sans-serif;
+	font-weight: 700;
 }
 
 .about{
@@ -93,17 +104,12 @@
 	width: 18%;
 }
 .title{
-	padding-top: 10px;
-	line-height: 10px;
-	font-size: 32px;
-	font-family: 'Open Sans';
-	font-weight: 800;
-	color: #202020;
+    font-family: 'Lato', sans-serif;
 }
 .subtitle{
 	line-height: 10px;
 	font-size: 18px;
-	font-family: 'Open Sans';
+	font-family: 'Lato', sans-serif;
 	font-weight: 600;
 	color: #909090;
 }
@@ -115,33 +121,31 @@
 	align-items: center;
 }
 .btn{
-	width: 35px;
-	height: 35px;
-	background-color: black;
+	width: 25px;
+	height: 25px;
+	background-color: gray;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 20px;
-	font-family: 'Open Sans';
-	font-weight: 900;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
 	color: #202020;
 	cursor: pointer;
     color: white;
     margin-left: 10px;
+    border-radius: 50%;
 }
 .count{
-	font-size: 20px;
-	font-family: 'Open Sans';
-	font-weight: 600;
+	font-size: 26px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 600;
 	color: #202020;
-
-    display: inline-block;
-    width: 50px;
-    border: 2px solid #000;
-    text-align: center;
-    padding: 1px 10px;
+    margin-left: 10px;
 }
-
+.red{
+    background: #EF0840;
+}
 
 
 /* .prices{
@@ -150,15 +154,15 @@
 } */
 .amount{
 	font-size: 26px;
-	font-family: 'Open Sans';
-	font-weight: 800;
+    font-family: 'Lato', sans-serif;
+	font-weight: 700;
 	color: #202020;
 }
 
 .remove{
 	padding-top: 5px;
 	font-size: 14px;
-	font-family: 'Open Sans';
+	font-family: 'Lato', sans-serif;
 	font-weight: 600;
 	color: #E44C4C;
 	cursor: pointer;
@@ -174,7 +178,7 @@ hr{
 }
 .checkout{
 	float: right;
-	margin-right: 16%;
+	margin-right: 21%;
     margin-bottom: 2%;
 	width: 60%;
 }
@@ -185,14 +189,14 @@ hr{
     margin-bottom: 10%;
 }
 .Subtotal{
-	font-size: 22px;
-	font-family: 'Open Sans';
+	font-size: 23px;
+    font-family: 'Lato', sans-serif;
 	font-weight: 700;
 	color: #202020;
 }
 .items{
 	font-size: 16px;
-	font-family: 'Open Sans';
+	font-family: 'Lato', sans-serif;
 	font-weight: 500;
 	color: #909090;
 	line-height: 10px;
@@ -203,19 +207,20 @@ hr{
 	height: 40px;
 	cursor: pointer;
 	font-size: 16px;
-	font-family: 'Open Sans';
+	font-family: 'Lato', sans-serif;
 	font-weight: 600;
 	color: #202020;
 
     display: block;
     box-shadow: 5px 4px 1px #888888;
+    border-radius: 25px;
     margin: auto;
     margin-top: 2%;
 }
 
 .total-box{
-    border: solid thick black;
-    border-width: 0px 0em 0px 5px;
+    border: solid thin gray;
+    border-width: 0px 0em 0px 1px;
     height: 495px;
     width: 30%;
     margin-left: 70%;
@@ -227,7 +232,8 @@ hr{
 }
 
 .checkout-content{
-    border: solid thick black;
+    border: solid thin gray;
+    border-radius: 5px;
     width: 80%;
     height: 500px;
     display: block;
@@ -238,7 +244,7 @@ hr{
     margin-top: 250px;
 }
 tr{
-    border: solid thick black;
+    border: solid 1px lightgrey;
     border-width: 2px 0em 0px 0px;
 }
 
