--- a/fiverr/flashcard-study/styles.css
+++ b/fiverr/flashcard-study/styles.css
@@ -1,4 +1,5 @@
 
+/* === BACKGROUND IMG === */
 body{
     display: flex;
     flex-direction: column;
@@ -25,6 +26,7 @@ body::before{
     opacity: 0.7;
 }
 
+/* === START BUTTON === */
 .button-container{
     /* border: 1px solid black; */
     width: 90%;
@@ -40,6 +42,8 @@ body::before{
     font-size: 15px;
 }
 
+
+/* === DISPLAY CONTENT === */
 .container{
     /* border: 1px solid black; */
     width: 90%;
@@ -60,22 +64,39 @@ body::before{
     width: 95%;
 }
 
+/* === DISPLAY WORDS === */
+.display{
+    position: relative;
+    
+    width: 25%;
+    height: 16vh;
+    margin: 5% 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #display-meaning, #display-phrase, #display-script{
     background-color: white;
     opacity: 0.4;
     border: 1px solid grey;
     border-radius: 30px;
-    width: 25%;
-    height: 16vh;
-    margin: 5% 0;
-
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto; */
-    
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
 }
 
+#display-meaning p, #display-phrase p, #display-script p{
+    margin: auto;
+    font-size: 20px;
+    font-weight: 900px;
+    position: absolute;
+}
+
+
+/* === PASTE AREA === */
 #meaning, #phrase, #script{
     width: 30%;
     height: 50vh;
@@ -89,10 +110,10 @@ body::before{
 }
 
 #paste-meaning, #paste-phrase, #paste-script{
-    width: 100%;
+    width: 95%;
     height: 100%;
     background-color: white;
     opacity: 0.7;
     border-radius: 30px;
-    padding: 3%;
+    padding: 5%;
 }
