--- a/fiverr/flashcard-study/styles.css
+++ b/fiverr/flashcard-study/styles.css
@@ -1,51 +1,45 @@
 
-/* === BACKGROUND IMG === */
 body{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 3%;
-
-    position: relative;
-    overflow: hidden;
-
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-body::before{
-    content: "";
-    position: absolute;
-    width: 110%;
-    height: 110%;
-    top: -5%;
-    left: -5%;
-    z-index: -1;
-    background: url(bg.webp) 0 0 repeat;
-    transform: rotate(180deg);
-    opacity: 0.7;
-}
 
 /* === START BUTTON === */
 .button-container{
-    /* border: 1px solid black; */
+    padding-left: 15%;
     width: 90%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .button-container button{
-    margin: 2.5% 0;
     width: 20%;
-    height: 4vh;
+    height: 6vh;
     font-weight: 900;
     font-size: 15px;
+    border-radius: 15px;
+}
+
+button:disabled{
+    background-color: rgb(149, 93, 87);
+    border-color: rgb(149, 93, 87);
+    color: lightgrey;
+}
+
+button:enabled{
+    background-color: salmon;
+    border-color: salmon;
+    color: white;
 }
 
 
 /* === DISPLAY CONTENT === */
 .container{
-    /* border: 1px solid black; */
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -53,7 +47,6 @@ body::before{
 }
 
 .display-area, .paste-area{
-    /* border: 1px solid black; */
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -77,24 +70,9 @@ body::before{
     align-items: center;
 }
 
-#display-meaning, #display-phrase, #display-script{
-    background-color: white;
-    opacity: 0.4;
-    border: 1px solid grey;
-    border-radius: 30px;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
+.display p{
+    color: salmon;
 }
-
-#display-meaning p, #display-phrase p, #display-script p{
-    margin: auto;
-    font-size: 20px;
-    font-weight: 900px;
-    position: absolute;
-}
-
 
 /* === PASTE AREA === */
 #meaning, #phrase, #script{
@@ -102,18 +80,19 @@ body::before{
     height: 50vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     font-size: 20px;
     font-weight: 900;
-    text-shadow: 2px 2px 4px #000000;
-    color: white;
+}
+
+label{
+    padding-left: 15%;
 }
 
 #paste-meaning, #paste-phrase, #paste-script{
     width: 95%;
     height: 100%;
-    background-color: white;
-    opacity: 0.7;
-    border-radius: 30px;
+    border-width: 2px; 
     padding: 5%;
+    margin-top: 5%;
 }
