--- a/fiverr/SAT-math-questions/style.css
+++ b/fiverr/SAT-math-questions/style.css
@@ -214,13 +214,73 @@ footer {
   width: 1820px;
 }
 
+ 
+
+.timerProgressContainer{
+    display: flex;
+    justify-content: space-between;
+}
+.timerProgressContainer div{
+    width: 35%;
+    display: flex;
+    align-items: baseline;
+}
+
+ 
+#progress1{
+    color: green;
+}
+
+#progress2{
+    color: red;
+}
+
+#bar-1{
+    background-color: green;
+}
+
+#bar-2{
+    background-color: red;
+}
+
 #progress1, #progress2 {
   position: relative;
   float: left;
   text-align: right;
   margin-top: 20px;
   font-size: 30px;
-  color: white;
+  /* color: white; */
+  width: 30%;
+
+  font-weight: 900;
+  font-size: 5rem;
+  font-family: sans-serif;
+}
+
+/* progress bar */
+#progress-bar-1, #progress-bar-2{
+    position: relative;
+    height: 5px;
+    border-radius: 10px;
+    background-color: grey;
+    width: 70%;
+}
+
+#bar-1, #bar-2{
+    position: absolute;
+    height: 100%;
+    border-radius: 10px;
+    /* background-color: red; */
+    left: 3px;
+}
+
+.playAnimation{
+    animation: progressAnimation 60s forwards;
+}
+
+@keyframes progressAnimation {
+    0% {width: 100%;}
+    100% {width: 0%;}
 }
 
 #timer1, #timer2 {
@@ -230,6 +290,10 @@ footer {
   margin-top: 20px;
   font-size: 30px;
   color: white;
+
+  font-weight: 900;
+  font-size: 5rem;
+  font-family: sans-serif;
 }
 
 #resultBox {
@@ -306,109 +370,11 @@ footer {
 
 
 .area{
-    background: #4e54c8;  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+    background: black;  
+    /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);   */
     width: 150%;
     height:180vh;
 }
-
-.circles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: rgba(255, 255, 255, 0.2);
-    animation: animate 25s linear infinite;
-    bottom: -150px;
-    
-}
-
-.circles li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-}
-
-
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-    animation-duration: 12s;
-}
-
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-
-.circles li:nth-child(4){
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0s;
-    animation-duration: 18s;
-}
-
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
-}
-
-.circles li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
-}
-
-.circles li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 7s;
-}
-
-.circles li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 15s;
-    animation-duration: 45s;
-}
-
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
-}
-
-.circles li:nth-child(10){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 11s;
-}
-
 
 
 @keyframes animate {
