--- a/fiverr/submenu-navigation/styles.css
+++ b/fiverr/submenu-navigation/styles.css
@@ -1,109 +1,471 @@
-
 /*  MENU  */
 
-@media all{
-    nav{display:block;}
-    a{background-color:transparent;}
-    a:active,a:hover{outline:0;}
-    @media print{
-    *,:after,:before{background:0 0!important;color:#000!important;-webkit-box-shadow:none!important;box-shadow:none!important;text-shadow:none!important;}
-    a,a:visited{text-decoration:underline;}
-    a[href]:after{content:" (" attr(href) ")";}
-    a[href^="#"]:after{content:"";}
+@media all {
+    nav {
+        display: block;
     }
-    *,:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
-    a{color:#428bca;text-decoration:none;}
-    a:focus,a:hover{color:#2a6496;text-decoration:underline;}
-    a:focus{outline:5px auto -webkit-focus-ring-color;outline-offset:-2px;}
-    ul{margin-top:0;margin-bottom:10px;}
+
+    a {
+        background-color: transparent;
     }
-    /*! CSS Used from: https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/style.scss.css?v=15499029808024750271662026164 ; media=all */
-    @media all{
-    *:focus{outline:none;}
-    a{color:#777;text-decoration:none;outline:none;}
-    a:hover{text-decoration:none;color:#333;outline:none;}
-    a:active,a:visited,a:focus{text-decoration:none;outline:none;}
-    ::-webkit-input-placeholder{color:#777;}
-    ::-moz-placeholder{color:#777;}
-    :-moz-placeholder{color:#777;}
-    :-ms-input-placeholder{color:#777;}
-    .panel-menu a{text-decoration:none!important;color:#333;font-weight:600;display:flex;justify-content:space-between;padding:15px 50px;transition:all .2s linear;-ms-transition:all .2s linear;-webkit-transition:all .2s linear;-o-transition:all .2s linear;}
-    .panel-menu a:hover{color:#fe4135;background:#f6f6f8;}
-    .panel-menu ul{list-style-type:none;margin:0;padding:0;}
-    .panel-menu li{margin:0;width:100%;border-bottom:1px solid #e9e9e9;}
-    .panel-menu .mm-close,.panel-menu .mm-prev-level,.panel-menu .mm-original-link{display:block;}
-    .mmitemopen.panel-menu{-webkit-transition:-webkit-transform .3s ease;transition:-webkit-transform .3s ease;transition:transform .3s ease;transition:transform .3s ease,-webkit-transform .3s ease;-webkit-transform:translate(0,0);-ms-transform:translate(0,0);transform:translate(0);-webkit-transform:translate3d(0,0,0);transform:translateZ(0);}
-    .panel-menu,.mmpanels,.mmpanels>.mmpanel{position:absolute;top:0;bottom:0;left:0;width:inherit;}
-    .panel-menu{display:block;position:fixed;z-index:12;background:white;width:300px;-webkit-transform:translate(-100%,0);-ms-transform:translate(-100%,0);transform:translate(-100%);-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0);}
-    .mmpanels{overflow:hidden;}
-    .mmpanels>.mmpanel{overflow:scroll;overflow-x:hidden;overflow-y:auto;}
-    .mmpanels,.mmpanels>.mmpanel{background:inherit;border-color:inherit;}
-    .mmpanels>.mmpanel:not(.mmhidden){display:block;}
-    .mmpanels>.mmpanel:after{content:"";display:block;height:20px;}
-    .mmhidden{display:none;}
-    .mm-original-link{background:#f6f6f8;}
-    .mm-original-link:before{padding-right:10px;}
-    .mm-next-level:after{content:"\e5cc";padding-left:10px;}
-    .mm-prev-level{padding:10px 15px 16px!important;}
-    .mm-close-parent a{padding:15px 16px;}
-    .mm-prev-level:before{content:"\e408";padding-right:10px;position:relative;top:6px;}
-    .mm-prev-level:hover:before,.mm-next-level:hover:after,.mm-close:hover:before{color:#fe4135;}
-    .mm-close:before{content:"\e5cd";padding-right:10px;position:relative;top:6px;}
-    .mm-next-level:after,.mm-prev-level:before,.mm-close:before{font-family:Material Icons;font-size:24px;line-height:24px;font-weight:400;color:#333;transition:all .2s linear;-ms-transition:all .2s linear;-webkit-transition:all .2s linear;-o-transition:all .2s linear;}
-    .mmpanel{-webkit-transition:-webkit-transform .3s ease;transition:-webkit-transform .3s ease;transition:transform .3s ease;transition:transform .3s ease,-webkit-transform .3s ease;-webkit-transform:translate(100%,0);-ms-transform:translate(100%,0);transform:translate(100%);-webkit-transform:translate3d(100%,0,0);transform:translate3d(100%,0,0);}
-    .mmpanel.mmopened{-webkit-transform:translate(0,0);-ms-transform:translate(0,0);transform:translate(0);-webkit-transform:translate3d(0,0,0);transform:translateZ(0);}
-    @media screen and (min-width: 768px){
-    .mainmenu-mobile li:last-of-type{display:none;}
+
+    a:active, a:hover {
+        outline: 0;
     }
+
+    @media print {
+        *, :after, :before {
+            background: 0 0 !important;
+            color: #000 !important;
+            -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+            text-shadow: none !important;
+        }
+
+        a, a:visited {
+            text-decoration: underline;
+        }
+
+        a[href]:after {
+            content: " ("attr(href) ")";
+        }
+
+        a[href^="#"]:after {
+            content: "";
+        }
     }
-    /*! CSS Used fontfaces */
-    @font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.eot);src:local('Material Icons'),local('MaterialIcons-Regular'),url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.woff2) format('woff2'),url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.woff) format('woff'),url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.ttf) format('truetype');font-display:swap;}
+
+    *, :after, :before {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+    a {
+        color: #428bca;
+        text-decoration: none;
+    }
+
+    a:focus, a:hover {
+        color: #2a6496;
+        text-decoration: underline;
+    }
+
+    a:focus {
+        outline: 5px auto -webkit-focus-ring-color;
+        outline-offset: -2px;
+    }
+
+    ul {
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+}
+
+@media all {
+    *:focus {
+        outline: none;
+    }
+
+    a {
+        color: #777;
+        text-decoration: none;
+        outline: none;
+    }
+
+    a:hover {
+        text-decoration: none;
+        color: #333;
+        outline: none;
+    }
+
+    a:active, a:visited, a:focus {
+        text-decoration: none;
+        outline: none;
+    }
+
+    ::-webkit-input-placeholder {
+        color: #777;
+    }
+
+    ::-moz-placeholder {
+        color: #777;
+    }
+
+    :-moz-placeholder {
+        color: #777;
+    }
+
+    :-ms-input-placeholder {
+        color: #777;
+    }
+
+    .panel-menu a {
+        text-decoration: none !important;
+        color: #333;
+        font-weight: 600;
+        display: flex;
+        justify-content: space-between;
+        padding: 15px 50px;
+        transition: all .2s linear;
+        -ms-transition: all .2s linear;
+        -webkit-transition: all .2s linear;
+        -o-transition: all .2s linear;
+    }
+
+    .panel-menu a:hover {
+        color: #fe4135;
+        background: #f6f6f8;
+    }
+
+    .panel-menu ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .panel-menu li {
+        margin: 0;
+        width: 100%;
+        border-bottom: 1px solid #e9e9e9;
+    }
+
+    .panel-menu .mm-close, .panel-menu .mm-prev-level, .panel-menu .mm-original-link {
+        display: block;
+    }
+
+    .mmitemopen.panel-menu {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0);
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translateZ(0);
+    }
+
+    .panel-menu, .mmpanels, .mmpanels>.mmpanel {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: inherit;
+    }
+
+    .panel-menu {
+        display: block;
+        position: fixed;
+        z-index: 12;
+        background: white;
+        width: 300px;
+        -webkit-transition: -webkit-transform .3s ease;
+        transition: -webkit-transform .3s ease;
+        transition: transform .3s ease;
+        transition: transform .3s ease, -webkit-transform .3s ease;
+
+
+        -webkit-transform: translate(-100%, 0);
+        -ms-transform: translate(-100%, 0);
+        transform: translate(-100%);
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    .panel-menu .mm-close {
+        display: block;
+    }
+
+    .mmpanels {
+        overflow: hidden;
+    }
+
+    .mmpanels>.mmpanel {
+        overflow: scroll;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+    .mmpanels, .mmpanels>.mmpanel {
+        background: inherit;
+        border-color: inherit;
+    }
+
+    .mmpanels>.mmpanel:not(.mmhidden) {
+        display: block;
+    }
+
+    .mmpanels>.mmpanel:after {
+        content: "";
+        display: block;
+        height: 20px;
+    }
+
+    .mmhidden {
+        display: none;
+    }
+
+    .mm-original-link {
+        background: #f6f6f8;
+    }
+
+    .mm-original-link:before {
+        padding-right: 10px;
+    }
+
+    .mm-next-level:after {
+        content: "\e5cc";
+        padding-left: 10px;
+    }
+
+    .mm-prev-level {
+        padding: 10px 15px 16px !important;
+    }
+
+    .mm-close-parent a {
+        padding: 15px 16px;
+    }
+
+    .mm-prev-level:before {
+        content: "\e408";
+        padding-right: 10px;
+        position: relative;
+        top: 6px;
+    }
+
+    .mm-prev-level:hover:before, .mm-next-level:hover:after, .mm-close:hover:before {
+        color: #fe4135;
+    }
+
+    .mm-close:before {
+        content: "\e5cd";
+        padding-right: 10px;
+        position: relative;
+        top: 6px;
+    }
+
+    .mm-next-level:after, .mm-prev-level:before, .mm-close:before {
+        font-family: Material Icons;
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 400;
+        color: #333;
+        transition: all .2s linear;
+        -ms-transition: all .2s linear;
+        -webkit-transition: all .2s linear;
+        -o-transition: all .2s linear;
+    }
+
+    .mmpanel {
+        -webkit-transition: -webkit-transform .3s ease;
+        transition: -webkit-transform .3s ease;
+        transition: transform .3s ease;
+        transition: transform .3s ease, -webkit-transform .3s ease;
+        -webkit-transform: translate(100%, 0);
+        -ms-transform: translate(100%, 0);
+        transform: translate(100%);
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
+    }
+
+    .mmpanel.mmopened {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0);
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translateZ(0);
+    }
+
+    .mmpanel.mmhidden {
+        -webkit-transform: translate(-100%, 0);
+        -ms-transform: translate(-100%, 0);
+        transform: translate(-100%);
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    @media screen and (min-width: 768px) {
+        .mainmenu-mobile li:last-of-type {
+            display: none;
+        }
+    }
+}
+
+/*! CSS Used fontfaces */
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.eot);
+    src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.woff2) format('woff2'), url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.woff) format('woff'), url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.ttf) format('truetype');
+    font-display: swap;
+}
 
 
 /*  TOGGLE   */
-@media all{
-    @media print{
-    *,:after,:before{background:0 0!important;color:#000!important;-webkit-box-shadow:none!important;box-shadow:none!important;text-shadow:none!important;}
+@media all {
+    @media print {
+        *, :after, :before {
+            background: 0 0 !important;
+            color: #000 !important;
+            -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+            text-shadow: none !important;
+        }
     }
-    *,:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+
+    *, :after, :before {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
     }
-    /*! CSS Used from: https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/fontstyle.min.css?v=84097439107685786381637738504 ; media=all */
-    @media all{
-    [class*=icon-]:before{font-family:'Material Icons';font-weight:400;font-style:normal;font-size:inherit;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
-    [class^=icon-]:hover{text-decoration:none;}
+}
+
+@media all {
+    [class*=icon-]:before {
+        font-family: 'Material Icons';
+        font-weight: 400;
+        font-style: normal;
+        font-size: inherit;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
     }
-    /*! CSS Used from: https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/style.scss.css?v=15499029808024750271662026164 ; media=all */
-    @media all{
-    *:focus{outline:none;}
-    ::-webkit-input-placeholder{color:#777;}
-    ::-moz-placeholder{color:#777;}
-    :-moz-placeholder{color:#777;}
-    :-ms-input-placeholder{color:#777;}
-    .mobile-menu-toggle{font-size:16px;padding:10px 0 14px 0;cursor:pointer;font-weight:500;display:inline-block;position:relative;margin-top:14px;margin-bottom:12px;margin-right:10px!important;transition:all 0s linear;-ms-transition:all 0s linear;-webkit-transition:all 0s linear;-o-transition:all 0s linear;}
-    .mobile-menu-toggle .icon-bar{background:#333333;width:18px;height:2px;display:block;transition:all 0s linear;-ms-transition:all 0s linear;-webkit-transition:all 0s linear;-o-transition:all 0s linear;}
-    .mobile-menu-toggle .icon-bar+.icon-bar{margin-top:3px;}
-    .mobile-menu-toggle .menu-text{position:absolute;top:3px;display:inline-block;line-height:26px;color:#333;font-weight:600;letter-spacing:.02em;padding:0 0 0 31px;transition:all 0s linear;-ms-transition:all 0s linear;-webkit-transition:all 0s linear;-o-transition:all 0s linear;}
-    .mobile-menu-toggle:hover .menu-text{color:#c51b36;}
-    .mobile-menu-toggle:hover .icon-bar{background:#c51b36;}
-    header div{vertical-align:top;}
-    #shopify-section-header .mobile-menu-toggle .icon-bar{background:#fff!important;}
-    #shopify-section-header .mobile-menu-toggle .menu-text{color:#fff!important;}
-    .mobile-header .mobile-menu-toggle{margin-top:0;padding-bottom:0;}
-    .mobile-header .mobile-menu-toggle .menu-text{display:none;}
-    #shopify-section-header .mobile-menu-toggle .icon-bar{background:#fff!important;}
-    #shopify-section-header .mobile-menu-toggle .menu-text{color:#fff!important;}
+
+    [class^=icon-]:hover {
+        text-decoration: none;
     }
-    /*! CSS Used fontfaces */
-    @font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.eot);src:local('Material Icons'),local('MaterialIcons-Regular'),url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.woff2) format('woff2'),url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.woff) format('woff'),url(https://cdn.shopify.com/s/files/1/0119/7794/9280/t/2/assets/MaterialIcons-Regular.ttf) format('truetype');font-display:swap;}
+}
+
+@media all {
+    *:focus {
+        outline: none;
+    }
+
+    ::-webkit-input-placeholder {
+        color: #777;
+    }
+
+    ::-moz-placeholder {
+        color: #777;
+    }
+
+    :-moz-placeholder {
+        color: #777;
+    }
+
+    :-ms-input-placeholder {
+        color: #777;
+    }
+
+    .mobile-menu-toggle {
+        font-size: 16px;
+        padding: 10px 0 14px 0;
+        cursor: pointer;
+        font-weight: 500;
+        display: inline-block;
+        position: relative;
+        margin-top: 14px;
+        margin-bottom: 12px;
+        margin-right: 10px !important;
+        transition: all 0s linear;
+        -ms-transition: all 0s linear;
+        -webkit-transition: all 0s linear;
+        -o-transition: all 0s linear;
+    }
+
+    .mobile-menu-toggle .icon-bar {
+        background: #333333;
+        width: 18px;
+        height: 2px;
+        display: block;
+        transition: all 0s linear;
+        -ms-transition: all 0s linear;
+        -webkit-transition: all 0s linear;
+        -o-transition: all 0s linear;
+    }
+
+    .mobile-menu-toggle .icon-bar+.icon-bar {
+        margin-top: 3px;
+    }
+
+    .mobile-menu-toggle .menu-text {
+        position: absolute;
+        top: 3px;
+        display: inline-block;
+        line-height: 26px;
+        color: #333;
+        font-weight: 600;
+        letter-spacing: .02em;
+        padding: 0 0 0 31px;
+        transition: all 0s linear;
+        -ms-transition: all 0s linear;
+        -webkit-transition: all 0s linear;
+        -o-transition: all 0s linear;
+    }
+
+    .mobile-menu-toggle:hover .menu-text {
+        color: #c51b36;
+    }
+
+    .mobile-menu-toggle:hover .icon-bar {
+        background: #c51b36;
+    }
+
+    header div {
+        vertical-align: top;
+    }
+
+    #shopify-section-header .mobile-menu-toggle .icon-bar {
+        background: #fff !important;
+    }
+
+    #shopify-section-header .mobile-menu-toggle .menu-text {
+        color: #fff !important;
+    }
+
+    .mobile-header .mobile-menu-toggle {
+        margin-top: 0;
+        padding-bottom: 0;
+    }
+
+    .mobile-header .mobile-menu-toggle .menu-text {
+        display: none;
+    }
+
+    #shopify-section-header .mobile-menu-toggle .icon-bar {
+        background: #fff !important;
+    }
+
+    #shopify-section-header .mobile-menu-toggle .menu-text {
+        color: #fff !important;
+    }
+}
+
  
+
 /* custom */
-body{
+body {
     background-color: lightgrey;
     margin: 0;
 }
-header{
+
+header {
     padding-left: 3%;
     width: 100%;
     height: 9.5vh;
     background-color: white;
+}
+ 
+/* sliding animations */
+.mmpanel.mmsubopened {
+    -webkit-transform: translate(-100%, 0);
+    -ms-transform: translate(-100%, 0);
+    transform: translate(-100%);
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+}
+
+.mmitemopen.panel-menu.mmhide {
+    -webkit-transform: translate(-100%, 0);
+    -ms-transform: translate(-100%, 0);
+    transform: translate(-100%);
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
 }
