--- a/fiverr/html-css/biking-app/styles.css
+++ b/fiverr/html-css/biking-app/styles.css
@@ -1,27 +1,3 @@
-/* 
-
-======================================
-
-    global styles ALL pages will have
-        ( nav bar and footer )
-
-======================================
-
-*/
-
-
-main {
-    width: 80%;
-    margin: auto;
-}
-
-.date {
-    color: var(--gray1);
-}
-
-
-
-
 :root {
     --gray1: rgb(142, 142, 147);
     --gray2: rgb(174, 174, 178);
@@ -67,7 +43,14 @@ body {
     margin: 0;
 }
 
+main {
+    width: 80%;
+    margin: auto;
+}
 
+.date {
+    color: var(--gray1);
+}
 
 /* === NAV === */
 header {
@@ -121,54 +104,6 @@ header {
     display: none;
 }
 
-/* === MOBILE NAV === */
-@media screen and (max-width: 600px) {
-    header {
-        display: unset;
-        padding: 0;
-        height: 10vh;
-    }
-
-    /* closed */
-    .topnav div a {
-        display: none;
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-
-    /* open */
-    .topnav.responsive {
-        position: relative;
-        display: block;
-    }
-
-    .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 22px;
-    }
-
-    .topnav.responsive .button {
-        right: 135px;
-        top: 13px;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-
-    .topnav.responsive .header-list {
-        flex-direction: column;
-        float: left;
-        align-items: baseline;
-    }
-}
-
 .download-button {
     color: #ff2d54;
     background-color: var(--gray5);
@@ -182,6 +117,116 @@ header {
     font-size: 20px;
 }
 
+
+/* ===  MOBILE MENU  === */
+
+#menuToggle {
+    display: block;
+    position: relative;
+    top: 100px;
+    left: 50px;
+    z-index: 1;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#menuToggle a {
+    text-decoration: none;
+    color: #232323;
+    -webkit-transition: color 0.3s ease;
+    -o-transition: color 0.3s ease;
+    transition: color 0.3s ease;
+}
+
+#menuToggle a:hover {
+    color: var(--pink);
+}
+
+
+#menuToggle input {
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: -81px;
+    right: 180px;
+    padding: 0;
+    cursor: pointer;
+    opacity: 0;/* hide this */
+    z-index: 2;/* and place it over the arrow */
+    -webkit-touch-callout: none;
+}
+
+#menuToggle label {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: -96px;
+    right: 180px;
+}
+
+#menu {
+    position: absolute;/* Use absolute positioning to place the menu off-screen*/
+    width: 92%;
+    margin: -7vh 0 0 -50px;
+    padding-bottom: 3vh;
+    background: white;
+    list-style-type: none;
+    top: -100vh;
+    -webkit-transition: top 0.3s ease;
+    -o-transition: top 0.3s ease;
+    transition: top 0.3s ease;
+}
+
+#menu li {
+    padding: 10px 0;
+    font-size: 22px;
+}
+
+#menu a {
+    display: block;
+    width: 80%;
+}
+
+
+#menuToggle input:checked~ul {
+    top: 3.75vh;/* Slide the menu in from top when the input is checked*/
+}
+
+.mobile-navigation {
+    height: 10vh;
+    background-color: white;
+    display: none;
+}
+
+.mobile-navigation .download-button {
+    width: 10vh;
+    margin-left: 4vh;
+}
+
+.mobile-navigation label {
+    display: flex;
+    margin-top: 2vh;
+}
+
+.mobile-navigation .website-name {
+    position: absolute;
+    top: 3.5vh;
+    left: 3vh;
+}
+
+/* hide desktop nav and show mobile nav */
+@media screen and (max-width: 600px) {
+    .mobile-navigation {
+        display: block;
+    }
+
+    header {
+        display: none;
+    }
+}
 
 
 
@@ -206,4 +251,205 @@ footer nav ul li {
 .website-copyright {
     padding-left: 10px;
     color: var(--gray1);
+}
+
+
+
+
+/* ===  OVERVIEW.html  === */
+.overview main {
+    width: 70%;
+    margin: auto;
+    margin-bottom: 10vh;
+}
+
+.overview .app-icon {
+    border-color: var(--gray3);
+    border-radius: 20%;
+    border-style: solid;
+    border-width: 1px;
+    display: block;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 64px;
+    margin-top: 5vh;
+}
+
+.overview .app-name {
+    text-align: center;
+}
+
+.overview .app-subtitle {
+    text-align: center;
+}
+
+/* preview screenshot*/
+.overview .preview {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5vh;
+}
+
+.overview .bezel {
+    position: relative;
+    width: 50%;
+}
+
+.overview .app-screenshot {
+    position: absolute;
+    z-index: -1;
+    width: 31%;
+}
+
+/* TABLET AND DESKTOP -- paragraph columns */
+@media screen and (min-width: 600px) {
+    .overview section {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 10%;
+    }
+
+    .overview article {
+        flex: 0 0 45%; /* two columns */
+       
+
+    }
+}
+
+/* faq */
+.overview .faqs-accordion {
+    margin-left: -20px;
+    width: 110%;
+    border-radius: 15px;
+    background-color: white;
+}
+
+.overview .accordion {
+    background-color: white;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.overview .accordion:after {
+    content: '\02795';/* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+.overview .accordion.active:after {
+    content: "\2796";/* Unicode character for "minus" sign (-) */
+}
+
+.overview .panel {
+    padding: 10px 18px;
+    background-color: white;
+    overflow: hidden;
+    width: 100%;
+    margin: 0;
+}
+
+/* rounded corners */
+.overview .accordion.first {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.overview .panel.last, .overview .accordion.last {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.overview details[open] .accordion.last {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.overview summary {
+    list-style: none;    /* remove default marker */
+}
+
+
+/* ===  RELEASES.html  === */
+.releases .releases-list {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 10vh 0;
+}
+
+.releases .release-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: -20px;
+    margin-top: 5vh;
+}
+
+/* ===  ARTICLES.html  === */
+.articles main {
+    margin: 10vh auto;
+}
+
+.articles .articles-list {
+    list-style-type: none;
+    padding-left: 0;
+
+}
+
+.articles .articles-list LI {
+    background-color: white;
+    margin-bottom: 10vh;
+    border-radius: 30px;
+}
+
+.articles article {
+    border-radius: 30px;
+    width: 90%;
+    margin: auto;
+    padding-bottom: 20px;
+
+}
+
+.articles img {
+    width: 100%;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+}
+
+/* TABLET AND DESKTOP  */
+@media screen and (min-width: 600px) {
+    .articles .articles-list {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 10%;
+    }
+
+    .articles .articles-list li {
+        flex: 0 0 45%;
+        /* two columns */
+
+    }
+}
+
+/* ===  ARTICLE  === */
+.article article {
+    width: 80%;
+    margin: 10vh auto;
+}
+
+.article img {
+    width: 100vw;
+}
+
+.article .button img {
+    width: unset;
 }
